fixed uc layout bug

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -57,13 +57,18 @@ a {
   display: flex;
 
   a {
+    display: block;
+    width: 0%;
     padding: 15px;
     text-align: center;
     color: rgba(0, 0, 0, 0.5);
-    flex-grow: 1;
+    flex: 1;
     border-left: 2px solid rgba(0, 0, 0, 0.1);
     &:first-child {
       border-left: 0;
+    }
+    &:hover {
+      border-bottom: 4px solid $accent-color;
     }
 
     i {
@@ -74,4 +79,38 @@ a {
       padding-bottom: 10px;
     }
   }
+
+  a.active {
+    border-bottom: 4px solid $accent-color;
+  }
+}
+
+.flex-container {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  .flex-item {
+    &:first-child {
+      margin-left: 20px;
+    }
+    &:last-child {
+      margin-right: 20px;
+    }
+  }
+}
+
+.flex-item {
+  background: tomato;
+  padding: 5px;
+  width: 50px;
+  height: 50px;
+  // margin: 5px;
+  line-height: 50px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
 }
